@@ -32,6 +32,7 @@
 - Fix: [#17205] Map generator sometimes crashes when not all standard terrain objects are available.
 - Fix: [#17221] Object ghosts and tooltips follow invisible cursor when moving the viewport by right-click dragging.
 - Fix: [#17255] Cursor position is incorrect when adjusting terrain and water height.
+- Fix: [#17257] [Plugin] Add tertiary colour to large scenery scripting API.
 - Fix: [#17261] Hand cursor position is incorrect when dragging items in the Inventions List window.
 - Fix: [#17292] Rows in shortcut key list stay highlighted when cursor leaves list.
 - Fix: [#17295] Pause status not cleared when loading a scenario made from a converted paused save.
